--- a/indexProf.html
+++ b/indexProf.html
@@ -4,9 +4,9 @@
   
   <title>Student Management System</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -74,12 +74,11 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        
-        <li><a href="nouveauEtudiant.php" >ADD STUDENT</a></li>
-        <li><a href="suppEtud.php" >REMOVE STUDENT</a></li>
-        <li><a href="modifierEtud.php">EDIT STUDENT</a></li>
-        <li><a href="liste_etud.php" >SEARCH</a></li>
-        <li><a href="logout.php" >LOG OUT</a></li>
+        <li><a href="nouveauProf.php">ADD PROFESSOR</a></li>
+        <li><a href="suppProf.php" >REMOVE PROFESSOR</a></li>
+        <li><a href="modifierProf.php">EDIT PROFESSOR</a></li>
+        <li><a href="liste_prof.php" >SEARCH</a></li>
+        <li><a href="logout.php">LOG OUT</a></li>
       </ul>
     </div>
   </div>
@@ -89,14 +88,14 @@
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin" style="color:#4a4e55">Who Am I?</h3>
   <img src="login.png" class="img-responsive margin" style="display:inline" alt="login" width="600" height="350">
-  <h3 style="color:#4a4e55">I'm your student management system</h3>
+  <h3 style="color:#4a4e55">I'm your professor management system</h3>
 </div>
 
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">About</h3>
-  <p>this interface has the purpose of managing students by adding, removing, searching and editing. </p>
-  <p>want to search for a student?</p>
+  <p>this interface has the purpose of managing professors by adding, removing, searching and editing. </p>
+  <p>want to search for a professor?</p>
   <a href="liste_etud.php" class="btn btn-default btn-lg">
     <span class="glyphicon glyphicon-search"></span> Search
   </a>
